@@ -17,6 +17,7 @@
     display file sizes and times in overwrite query
     file change detection blacklist non-block nfs fuse cifs smbfs ftpfs
     percent in path bar select by pattern
+    fix hang on click on 5000+ selected files in list view
 0.7.10  2012-07-25:
     added sort options #87 #37 #23
     completed russian translation ru.po
